--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>XB's HomePage</h1>
-</body>
+    <head>
+        <title>XB's HomePage</title>
+    </head>
+
+    <body>
+        <h1>
+		Welcom to XB's HomePage<br>
+		我是晓兵，一个集热情、专注、分享、才华于一体的完美主义追求者，正在寻找有相同价值观的你...<br>
+		I'm XiaoBing,Someone with Passion, Focus, Sharing, Talent ,Pursue for perfectionism. And you are looking for has the same values...<br>
+		</h1>
+    </body>
+
 </html>
