--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>XB's HomePage</title>
-    </head>
+<head>
+  <title>Bootstrap 实例</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">  
+  <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
 
-    <body>
-        <h1>
-		Welcom to XB's HomePage<br>
-		我是晓兵，一个集热情、专注、分享、才华于一体的完美主义追求者，正在寻找有相同价值观的你...<br>
-		I'm XiaoBing,Someone with Passion, Focus, Sharing, Talent ,Pursue for perfectionism. And you are looking for has the same values...<br>
-		</h1>
-    </body>
+<div class="container">
+  <div class="jumbotron">
+    <h1>我是晓兵，一个集热情、专注、分享、才华于一体的完美主义追求者，正在寻找有相同价值观的你...<br>
+        I'm XiaoBing,Someone with Passion, Focus, Sharing, Talent ,Pursue for perfectionism. And you are looking for has the same values...<br>
+    </h1>
+    <p>重置窗口大小，查看响应式效果！</p> 
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>第一列</h3>
+      <p>学的不仅是技术，更是梦想！</p>
+      <p>再牛逼的梦想,也抵不住你傻逼似的坚持！</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>第二列</h3>
+      <p>学的不仅是技术，更是梦想！</p>
+      <p>再牛逼的梦想,也抵不住你傻逼似的坚持！</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>第三列</h3>        
+      <p>学的不仅是技术，更是梦想！</p>
+      <p>再牛逼的梦想,也抵不住你傻逼似的坚持！</p>
+    </div>
+  </div>
+</div>
 
+</body>
 </html>
