--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>我是晓兵，一个集热情、专注、分享、才华于一体的完美主义追求者，正在寻找有相同价值观的你...<br>
         I'm XiaoBing,Someone with Passion, Focus, Sharing, Talent ,Pursue for perfectionism. And you are looking for has the same values...<br>
     </h1>
-    <p>重置窗口大小，查看响应式效果！</p> 
+    <p>XB's Home Page</p> 
   </div>
   <div class="row">
     <div class="col-sm-4">
