--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="container">
   <div class="jumbotron">
-    <h1 align="center" style=“font-family:微软雅黑 color:red font-size:30px”>我是晓兵，一个集热情、专注、分享、才华于一体的完美主义追求者，正在寻找有相同价值观的你...<br>
+    <h1 align="center" style=“font-family:微软雅黑 color:#00B0F0 font-size:30px”>我是晓兵，一个集热情、专注、分享、才华于一体的完美主义追求者，正在寻找有相同价值观的你...<br>
         I'm XiaoBing,Someone with Passion, Focus, Sharing, Talent ,Pursue for perfectionism. And you are looking for has the same values...<br>
     </h1>
     <p>XB's Home Page</p> 
