--- a/index.html
+++ b/index.html
@@ -1,40 +1,3 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>XB's Home Page</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">  
-  <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-
-<div class="container">
-  <div class="jumbotron">
-    <h1 align="center" style="font-family:微软雅黑;color:#00B0F0;font-size:32px">我是晓兵，一个集热情、专注、分享、才华于一体的完美主义追求者，正在寻找有相同价值观的你...<br>
-        I'm XiaoBing,Someone with Passion, Focus, Sharing, Talent ,Pursue for perfectionism. And you are looking for has the same values...<br>
-    </h1>
-    <p>XB IN 2017</p> 
-  </div>
-  <div class="row">
-    <div class="col-sm-4">
-      <h3>CAREER</h3>
-      <p>你站在桥上看风景，看风景的人在楼上看你，明月装饰了你的窗子，你装饰了别人的梦.</p>
-      <p>人生如戏，没有人比别人位置高，保持理想，不忘初心，方得始终.</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>LIFE</h3>
-      <p>铭记梦归处，不忘来时路.</p>
-      <p>感谢我的妻子Amily给予我生活和工作上的支持.</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>PROMISE</h3>        
-      <p>Google之道:SmartCreative|创意精英</p>
-      <p>未来社会最具价值的人具有核心特征：创造力、洞察力、对客户的感知力.</p>
-    </div>
-  </div>
-</div>
-
-</body>
+hello world
 </html>
