--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
       <p>Google之道:SmartCreative|创意精英</p>
       <p>未来社会最具价值的人具有核心特征：创造力、洞察力、对客户的感知力.</p>
     </div>
+    <div class="col-sm-4">
+      <h3>CONTACT</h3>        
+      <p>Mail:ssbandjl@163.com</p>
+      <p>WeiXin:ssbandjl</p>
+    </div>
   </div>
 </div>
 
