--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>XB's Home Page</title>
   <meta charset="utf-8">
@@ -8,14 +9,23 @@
   <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
 
+<body>
 <div class="container">
   <div class="jumbotron">
     <h1 align="center" style="font-family:微软雅黑;color:#00B0F0;font-size:32px">我是晓兵，一个集热情、专注、分享、才华于一体的完美主义追求者，正在寻找有相同价值观的你...<br>
         I'm XiaoBing,Someone with Passion, Focus, Sharing, Talent ,Pursue for perfectionism. And you are looking for has the same values...<br>
     </h1>
   </div>
+
+<p>XB-Amily</p>
+<img id="myImg_XB-Amily" src="HomePage.jpg" alt="The Scream" width="1140" height="500">
+<p>XB With Amily 2016/10</p>
+<video id="video" class="wrap" width ="1140" height ="" controls="" preload="none" poster="xb.png" type="video/mp4"> <br />
+<source src="News20111002.mp4"> <br />
+</video> <br />
+<br>  </p>
+  
   <div class="row">
     <div class="col-sm-4">
       <h3>CAREER</h3>
