--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <img id="myImg_XB-Amily" src="HomePage.jpg" alt="The Scream" width="1140" height="500">
 <p>XB With Amily 2016/10</p>
 <video id="video" class="wrap" width ="1140" height ="" controls="" preload="none" poster="xb.png" type="video/mp4"> <br />
-<source src="http://pan.baidu.com/s/1pLsj0MZ"> <br />
+<source src="News20111002.mp4"> <br />
 </video> <br />
 <br>  </p>
   
