--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <div class="col-sm-4">
       <h3>CONTACT</h3>
       <p>Mail:ssbandjl@163.com</p>
-      <p>WeiXin:ssbandjl</p>
+      <p>WX:ssbandjl</p>
+      <p>公众号:云原生云</p>
     </div>
   </div>
 </>
